--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,7 @@ venv.bak/
 # mypy
 .mypy_cache/
 Indel_searcher_2/FLASH-1.2.11.tar.gz
+
+# Input directory
+Indel_searcher_2/Input/JU/
+Indel_searcher_2/Output/
